[project]
name = "wallabag-to-karakeep"
version = "0.1.0"
description = "Migrate bookmarks from Wallabag to Karakeep"
requires-python = ">=3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallabag_to_karakeep"]
