[project]
name = "wallabag-to-karakeep"
version = "0.1.0"
description = "Migrate bookmarks from Wallabag to Karakeep"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
wallabag2karakeep = "wallabag_to_karakeep.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallabag_to_karakeep"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
